# AriaSQL

./: .gitignore  DOCUMENTATION.html  FUTURE_SCOPE.md  README.md  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.json
ariasql-package/: README.md  pyproject.toml
ariasql-package/ariasql/: drift_monitor.py
backend/: .env.example  Dockerfile  agent.py  config.py  context_engine.py  database.py  drift_monitor.py  eval_framework.py  eval_runner.py  ingest.py  llm_providers.py  main.py  models.py  query_cache.py  react_agent.py  requirements.txt  schema_graph.py  schema_index.py  sql_validator.py  tenant.py  test_excel_cases.py  test_improvements.py  tools.py  tracing.py  training_store.py  vector_store.py  visualization.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentSteps.jsx  ChatInterface.jsx  DataTable.jsx  DataVisualization.jsx  MessageBubble.jsx  Sidebar.jsx
sqlas/: __init__.py  agentic.py  context.py  core.py  correctness.py  evaluate.py  failure_analysis.py  governance.py  guardrails.py  production.py  prompt_registry.py  quality.py  reasoning.py  response.py  safety.py  visualization.py
tests/: test_governance.py  test_reasoning.py
