[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariasql"
version = "1.0.1"
description = "AriaSQL — Agentic SQL Agent. Natural language to SQL with ReAct reasoning, semantic cache, and a bundled React UI."
readme = "README.md"
license = "MIT"
authors = [{name = "Pradip Tivhale", email = "pradiptivhale@gmail.com"}]
requires-python = ">=3.10"
keywords = [
    "sql", "agent", "llm", "text-to-sql", "natural-language", "fastapi",
    "react", "agentic", "mlflow", "semantic-cache", "schema-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.61.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "sqlglot>=25.0.0",
    "networkx>=3.0",
    "mlflow>=3.1.0",
    "greenlet>=3.1.0",
    "sqlas>=2.8.0",
]

[project.optional-dependencies]
postgres  = ["asyncpg>=0.29.0"]
mysql     = ["aiomysql>=0.2.0"]
vector    = ["chromadb>=1.0.0"]
anthropic = ["anthropic>=0.49.0"]
all       = [
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "chromadb>=1.0.0",
    "anthropic>=0.49.0",
]
dev = ["pytest>=7.0", "httpx>=0.27.0", "build", "twine"]

[project.scripts]
ariasql = "ariasql.cli:main"

[project.urls]
Homepage      = "https://github.com/thepradip/AriaSQL"
Documentation = "https://github.com/thepradip/AriaSQL#readme"
Repository    = "https://github.com/thepradip/AriaSQL"

[tool.setuptools.packages.find]
include = ["ariasql*"]

[tool.setuptools.package-data]
ariasql = [
    "py.typed",
    "_static/**/*",
]
